# years

scraping/: pyproject.toml
scraping/scraping/: america_chronicling.py  main.py  ocr_tar.py
scraping/scraping/data/: ocr.json
scraping/scraping/sample_files/sn83027106/1883/01/06/ed-1/seq-1/: ocr.txt  ocr.xml
scraping/scraping/sample_files/sn83027106/1883/01/06/ed-1/seq-2/: ocr.txt  ocr.xml
scraping/scraping/sample_files/sn83027106/1883/01/06/ed-1/seq-3/: ocr.txt  ocr.xml
scraping/scraping/sample_files/sn83027106/1883/01/06/ed-1/seq-4/: ocr.txt  ocr.xml
scraping/scraping/sample_files/sn83027106/1883/01/13/ed-1/seq-1/: ocr.txt  ocr.xml
