[tool.poetry]
name = "scraping"
version = "0.1.0"
description = "Scraping for news data"
authors = ["suriya <suriyaganesh097@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
